--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/META-INF/spring-config/applicationContext.xml</param-value>
+        <param-value>/WEB-INF/spring/root-context.xml</param-value>
     </context-param>
 
     <listener>
@@ -20,7 +20,10 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/META-INF/spring-config/dispatcher-servlet.xml</param-value>
+            <param-value>
+                /WEB-INF/spring/appServlet/dispatcher-servlet.xml
+                /WEB-INF/spring/jdbc-config.xml
+            </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
